--- a/PetMagazine.Services/PetMagazine.Services.csproj
+++ b/PetMagazine.Services/PetMagazine.Services.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PetMagazine.Common\PetMagazine.Common.csproj" />
     <ProjectReference Include="..\PetMagazine.Data\PetMagazine.Data.csproj" />
   </ItemGroup>
 
