--- a/PetMagazine.Data/PetMagazine.Data.csproj
+++ b/PetMagazine.Data/PetMagazine.Data.csproj
@@ -24,4 +24,8 @@
     <Folder Include="Migrations\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PetMagazine.Common\PetMagazine.Common.csproj" />
+  </ItemGroup>
+
 </Project>
