--- a/PetMagazine.Web/PetMagazine.Web.csproj
+++ b/PetMagazine.Web/PetMagazine.Web.csproj
@@ -6,4 +6,18 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PetMagazine.Common\PetMagazine.Common.csproj" />
+    <ProjectReference Include="..\PetMagazine.Data\PetMagazine.Data.csproj" />
+    <ProjectReference Include="..\PetMagazine.Services\PetMagazine.Services.csproj" />
+  </ItemGroup>
+
 </Project>
